# Personal-Knowledge-Agent

./: .gitignore  README.md  extensions.json  pyproject.toml  requirements.txt  settings.json
src/: __init__.py
src/cli/: main.py
